# Four-Meme-Bundler

./: .env.sample  .gitignore  Anchor.toml  README.md  index.blox.js  package.json  tsconfig.json
abi/: FourMeme.json
programs/rwa-tokenization/: Cargo.toml
programs/rwa-tokenization/src/: consts.rs  errors.rs  lib.rs
programs/rwa-tokenization/src/events/: events.rs
programs/rwa-tokenization/src/instructions/: initialize.rs  mod.rs  redeem_asset.rs  register_asset.rs  set_asset_status.rs  tokenize_asset.rs  transfer_ownership.rs  update_asset_metadata.rs  verify_ownership.rs
programs/rwa-tokenization/src/states/: global_config.rs  mod.rs  rwa_asset.rs  tokenization.rs
programs/rwa-tokenization/src/utils/: fees.rs  mod.rs  validation.rs
src/: index.blox.ts
tests/: rwa-tokenization.ts
